# SkyLC

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  install.ps1  install_debug.ps1  install_linux.sh  main.grc  run_debug.ps1
assets/: ascii-art.txt
crates/skyd/: Cargo.toml
crates/skyd/src/: cli.rs  error.rs  lib.rs  manifest.rs
crates/skyd/src/dependencies/: fetch.rs  mod.rs  setup.rs  validation.rs
crates/skyl-codegen/: Cargo.toml
crates/skyl-codegen/src/: bytecode_gen.rs  lib.rs  step.rs
crates/skyl-data/: Cargo.toml
crates/skyl-data/src/: ast.rs  bytecode.rs  chunk.rs  collection_kind.rs  config.rs  context.rs  decompiler.rs  decorator.rs  descriptors.rs  expressions.rs  instructions.rs  ir_types.rs  lib.rs  memory.rs  objects.rs  reader.rs  semantic_types.rs  statements.rs  token.rs  token_stream.rs  typed_expression.rs  typed_statements.rs
crates/skyl-driver/: Cargo.toml
crates/skyl-driver/src/: diagnostic.rs  errors.rs  format_err.rs  lib.rs
crates/skyl-ffi/: Cargo.toml
crates/skyl-ffi/src/: lib.rs
crates/skyl-ir/: Cargo.toml
crates/skyl-ir/src/: constant_propagation.rs  ir_generator.rs  lib.rs  step.rs
crates/skyl-lexer/: Cargo.toml
crates/skyl-lexer/src/: lexer.rs  lib.rs  step.rs
crates/skyl-lexer/tests/: tokens.rs
crates/skyl-parser/: Cargo.toml
crates/skyl-parser/src/: lib.rs  parser.rs  step.rs
crates/skyl-parser/tests/: expressions.rs
crates/skyl-semantics/: Cargo.toml
crates/skyl-semantics/src/: attribute_processor.rs  control_flow.rs  decorator_processor.rs  expression_visitor.rs  expressions.rs  import_pipeline.rs  lib.rs  provider.rs  result.rs  semantic_analyzer.rs  semantic_context.rs  statements.rs  step.rs  type_check.rs  type_resolver.rs
crates/skyl-semantics/src/attributes/: mod.rs  operator.rs
crates/skyl-stdlib/: Cargo.toml
crates/skyl-stdlib/src/: io.rs  lib.rs  net.rs  prelude.rs  random.rs
crates/skyl-stdlib/src/net/: http.rs
crates/skyl-stdlib/src/prelude/: default.rs  float.rs  int.rs  list.rs  str.rs
crates/skyl-vm/: Cargo.toml
crates/skyl-vm/src/: frame.rs  heap.rs  lib.rs  virtual_machine.rs
crates/skylc/: Cargo.toml
crates/skylc/src/: lib.rs  version.rs
res/: test.gpp
skylc/: Cargo.toml
skylc/src/: cli.rs  config.rs  decompiler.rs  lib.rs  main.rs
src/: lib.rs
src/driver/: mod.rs
stdlib/: io.gpp  prelude.gpp
stdlib/math/: linear.gpp
stdlib/net/: http.gpp
stdlib/prelude/: attributes.gpp  bool.gpp  float.gpp  int.gpp  natives.gpp  range.gpp  str.gpp
test/: main.gpp  test.gpp
