[package]
name = "skylc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
skyl-lexer = { path = "../crates/skyl-lexer" }
skyl-parser = { path = "../crates/skyl-parser" }
skyl-semantics = { path = "../crates/skyl-semantics" }
skyl-driver = { path = "../crates/skyl-driver" }
skyl-data = { path = "../crates/skyl-data" }

clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.86"
