[package]
name = "skylc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
skyl-lexer = { path = "../crates/skyl-lexer" }
skyl-parser = { path = "../crates/skyl-parser" }
skyl-semantics = { path = "../crates/skyl-semantics" }
skyl-ir = { path = "../crates/skyl-ir" }
skyl-codegen = { path = "../crates/skyl-codegen" }
skyl-vm = { path = "../crates/skyl-vm" }
skyl-driver = { path = "../crates/skyl-driver" }
skyl-data = { path = "../crates/skyl-data" }
skyl-stdlib = { path = "../crates/skyl-stdlib" }

clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.86"
dotenvy = "0.15.7"
config = "0.15.13"
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
base64 = "0.22.1"
rand = "0.9.2"
