[package]
name = "skyd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
skyl-lexer = { path = "../skyl-lexer" }
skyl-parser = { path = "../skyl-parser" }
skyl-semantics = { path = "../skyl-semantics" }
skyl-ir = { path = "../skyl-ir" }
skyl-codegen = { path = "../skyl-codegen" }
skyl-vm = { path = "../skyl-vm" }
skyl-driver = { path = "../skyl-driver" }
skyl-data = { path = "../skyl-data" }
skyl-stdlib = { path = "../skyl-stdlib" }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.14"
toml = "0.9.5"
anyhow = "1.0.86"
git2 = "0.20.2"
dirs = "6.0.0"
