[package]
name = "skyl-codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
skyl-data = { path = "../skyl-data" }
skyl-driver = { path = "../skyl-driver" }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde", "derive"] }
