[package]
name = "skylc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
skyl-lexer = { path = "../skyl-lexer" }
skyl-parser = { path = "../skyl-parser" }
skyl-semantics = { path = "../skyl-semantics" }
skyl-ir = { path = "../skyl-ir" }
skyl-codegen = { path = "../skyl-codegen" }
skyl-vm = { path = "../skyl-vm" }
skyl-driver = { path = "../skyl-driver" }
skyl-data = { path = "../skyl-data" }
skyl-stdlib = { path = "../skyl-stdlib" }

clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.86"
dotenvy = "0.15.7"
config = "0.15.13"
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
base64 = "0.22.1"
rand = "0.9.2"
